fitz/dev_bbox.c
@@ -7,7 +7,7 @@ fz_bbox_fill_path(fz_device *dev, fz_path *path, int even_odd, fz_matrix ctm,
 	fz_colorspace *colorspace, float *color, float alpha)
 {
 	fz_bbox *result = dev->user;
-	fz_bbox bbox = fz_round_rect(fz_bound_path(dev->ctx, path, NULL, ctm));
+	fz_bbox bbox = fz_bbox_covering_rect(fz_bound_path(dev->ctx, path, NULL, ctm));
 	*result = fz_union_bbox(*result, bbox);
 }
 
@@ -16,7 +16,7 @@ fz_bbox_stroke_path(fz_device *dev, fz_path *path, fz_stroke_state *stroke, fz_m
 	fz_colorspace *colorspace, float *color, float alpha)
 {
 	fz_bbox *result = dev->user;
-	fz_bbox bbox = fz_round_rect(fz_bound_path(dev->ctx, path, stroke, ctm));
+	fz_bbox bbox = fz_bbox_covering_rect(fz_bound_path(dev->ctx, path, stroke, ctm));
 	*result = fz_union_bbox(*result, bbox);
 }
 
@@ -25,7 +25,7 @@ fz_bbox_fill_text(fz_device *dev, fz_text *text, fz_matrix ctm,
 	fz_colorspace *colorspace, float *color, float alpha)
 {
 	fz_bbox *result = dev->user;
-	fz_bbox bbox = fz_round_rect(fz_bound_text(dev->ctx, text, ctm));
+	fz_bbox bbox = fz_bbox_covering_rect(fz_bound_text(dev->ctx, text, ctm));
 	*result = fz_union_bbox(*result, bbox);
 }
 
@@ -34,7 +34,7 @@ fz_bbox_stroke_text(fz_device *dev, fz_text *text, fz_stroke_state *stroke, fz_m
 	fz_colorspace *colorspace, float *color, float alpha)
 {
 	fz_bbox *result = dev->user;
-	fz_bbox bbox = fz_round_rect(fz_bound_text(dev->ctx, text, ctm));
+	fz_bbox bbox = fz_bbox_covering_rect(fz_bound_text(dev->ctx, text, ctm));
 	*result = fz_union_bbox(*result, bbox);
 }
 
@@ -42,7 +42,7 @@ static void
 fz_bbox_fill_shade(fz_device *dev, fz_shade *shade, fz_matrix ctm, float alpha)
 {
 	fz_bbox *result = dev->user;
-	fz_bbox bbox = fz_round_rect(fz_bound_shade(dev->ctx, shade, ctm));
+	fz_bbox bbox = fz_bbox_covering_rect(fz_bound_shade(dev->ctx, shade, ctm));
 	*result = fz_union_bbox(*result, bbox);
 }
 
@@ -50,7 +50,7 @@ static void
 fz_bbox_fill_image(fz_device *dev, fz_image *image, fz_matrix ctm, float alpha)
 {
 	fz_bbox *result = dev->user;
-	fz_bbox bbox = fz_round_rect(fz_transform_rect(ctm, fz_unit_rect));
+	fz_bbox bbox = fz_bbox_covering_rect(fz_transform_rect(ctm, fz_unit_rect));
 	*result = fz_union_bbox(*result, bbox);
 }
 
